# snn-lib

./: .gitignore  CMakeLists.txt  LICENSE  MEMO.md  Makefile  README.md  cmake_install.cmake  config.yaml  snn-main.cpp
include/: macros.def
include/connections/: all_to_all_conntection.hpp  connection.hpp  delay_conntection.hpp
include/context/global_runtime_context/: global_runtime_context.hpp
include/interfaces/: function.hpp
include/network/: network.hpp  network_builder.hpp  parameters.hpp
include/network/configurations/: connection_configuration.hpp  neuron_configuration.hpp
include/network/initializer/: initializer.hpp  normal_weight_initializer.hpp  weight_initializers.hpp
include/neuron_models/: dynamical_neuron.hpp  initializer.hpp  lif_neuron.hpp  neuron.hpp  neuron_meta_structure.hpp  parameters.hpp  possion_neuron.hpp
include/recorder/: connection_recorder.hpp  neuron_recorder.hpp  recorder.hpp  recorder_function_examples.hpp  simulation_state_recorder.hpp  weight_recorder.hpp
include/simulator/: snn_simulator.hpp
include/synapse_models/: synapse.hpp
include/utils/: simulation_utils.hpp
src/: snn-main.cpp  snn-motion-main.cpp
src/connections/: connection.cpp  delay_connection.cpp
src/context/global_runtime_context/: global_runtime_context.cpp
src/lang/hl/: README.md
src/network/: network.cpp  network_builder.cpp
src/network/configurations/: connection_configuration.cpp  neuron_configuration.cpp  synapse_configuration.cpp
src/network/initializer/: initializer.cpp  normal_weight_initializer.cpp  weight_initializer.cpp
src/neuron_models/: dynamical_neuron.cpp  initializer.cpp  lif_neuron.cpp  neuron.cpp  neuron_meta_structure.cpp  possion_neuron.cpp
src/recorder/: connection_recorder.cpp  neuron_recorder.cpp  recorder.cpp  recorder_function_examples.cpp  simulation_state_recorder.cpp  weight_recorder.cpp
src/synapse_models/: synapse.cpp
src/utils/: simulation_utils.cpp
